apps/oxisource-public/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oxisource-public
  namespace: oxisource-public
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: oxisource-public
  ports:
    - {name: http, port: 8080, targetPort: http}
